# waitress

./: .env  Cargo.toml  README.md  provision_docker.sh
migrations/: 20250218222320_initial.sql  20250220005853_unique_port.sql  20250221201915_image.sql
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs  server.rs  user.rs
src/server/: mod.rs
src/tests/: mod.rs
src/version/: manifest.rs  mod.rs  server.rs
src/web/: error.rs  mod.rs  response.rs
src/web/middleware/: auth.rs  mod.rs  owns_server.rs
src/web/services/auth/: login.rs  mod.rs  signup.rs
src/web/services/server/: all.rs  create.rs  mod.rs
src/web/services/server/id/: delete.rs  get.rs  mod.rs
src/web/services/server/id/ws/: container_stream.rs  docker_stdout.rs  message.rs  mod.rs  ping.rs  stdin.rs  stdout.rs
src/web/services/server/ws/: docker_stdout.rs  message.rs  mod.rs
